flask-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: flask-app-conf
  name: flask-app-conf
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flask-app-conf
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flask-app-conf
    spec:
      containers:
      - image: alishersa1233/flask-app
        name: flask-app
        resources:
          requests:
            memory: "100Mi"
            cpu: "64m"
          limits:
            memory: "200Mi"
            cpu: "128m"
